2007-11-11  Michael Hutchinson  <mhutchinson@novell.com> 

	* MonoDevelop.Core.Logging/ConsoleLogger.cs: Fix logic that checks 
	  whether console text colouring is possible.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Execution/ProcessWrapper.cs,
	  MonoDevelop.Core.Execution/ProcessHostController.cs,
	  MonoDevelop.Core/ServiceManager.cs, MonoDevelop.Core/XmlReadHelper.cs,
	  MonoDevelop.Core/Properties.cs: Track LoggingService API changes.
	* MonoDevelop.Core.mdp, Makefile.am: Updated..
	* MonoDevelop.Core.Logging/FileLogger.cs,
	  MonoDevelop.Core.Logging/ConsoleLogger.cs,
	  MonoDevelop.Core.Logging/ILogger.cs,
	  MonoDevelop.Core.Logging/LogLevel.cs,
	  MonoDevelop.Core/LoggingService.cs: Rewrite logging service as a MIT/X11
	  static class.
	* MonoDevelop.Core/DefaultLoggingService.cs,
	  MonoDevelop.Core/ILoggingService.cs, MonoDevelop.Core/Runtime.cs: Remove
	  old logging service.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.addin.xml: Bump MD version.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.mdp: Project file names updated by change in MD path
	  functions.

2007-10-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/FileService.cs: Found a better solution for the "." case
	  in abs2rel path.

2007-10-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/FileService.cs: AbsoluteToRelativePath gives back . if
	  the paths are the same.

2007-10-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core.FileSystem/DefaultFileSystemExtension.cs,
	  MonoDevelop.Core/Runtime.cs, MonoDevelop.Core/FileEventArgs.cs,
	  MonoDevelop.Core/FileService.cs: Rewrote/Refactored FileService (it's
	  now under MIT), removed some unneccessary/unused methods.

2007-10-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/StringParserService.cs: Renamed some variables in the
	  stringparser service.

2007-10-11  Mike Krüger <mkrueger@novell.com> 
