@@ -1,3 +1,7 @@
+2007-11-12  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.Core/Runtime.cs: Add new SetProcessName method.
+
 2007-11-11  Michael Hutchinson  <mhutchinson@novell.com> 
 
 	* MonoDevelop.Core.Logging/ConsoleLogger.cs: Fix logic that checks 
